clusters/cl01tl/manifests/cilium/Gateway-cilium-tls-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-tls-gateway
  namespace: kube-system
  labels:
    app.kubernetes.io/name: cilium-tls-gateway
    app.kubernetes.io/instance: cilium
    app.kubernetes.io/part-of: cilium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    io.cilium/lb-ipam-ips: "10.232.1.23"
spec:
  addresses:
    - type: IPAddress
      value: 10.232.1.23
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.alexlebens.net'
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: https-gateway-cert
            namespace: kube-system
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: 'alexlebens.net'
      name: https-domain
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: https-gateway-cert
            namespace: kube-system
        mode: Terminate
